# OpenT_Poincare-Sphere-Simulator

./: PHYSICS.md  PLAN.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx  theme.ts  titlebar.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ControlPanel.tsx  InputStateSelector.tsx  JacobianPanel.tsx  PoincareSphere.tsx  PolarizationEllipse.tsx  RetardanceSlider.tsx  StatusBar.tsx  StokesDisplay.tsx  TitleBar.tsx
src/math/: jacobian.ts  mueller.ts  simulation.ts  stokes.ts
