[package]
name = "opent_poincare_sphere_simulator"
version = "0.1.0"
description = "OpenT Poincare Sphere Simulator"
authors = ["you"]
edition = "2021"

[lib]
name = "opent_poincare_sphere_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
